--- a/servur/package.json
+++ b/servur/package.json
@@ -5,6 +5,7 @@
   "main": "lib/index",
   "types": "lib/index",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -19,6 +20,8 @@
   "devDependencies": {
     "@types/express": "^4.16.0",
     "@types/node": "^10.5.1",
-    "@types/socket.io": "^1.4.36"
+    "@types/socket.io": "^1.4.36",
+    "ts-node": "^7.0.0",
+    "typescript": "^2.9.2"
   }
 }
