--- a/servur/package.json
+++ b/servur/package.json
@@ -6,12 +6,14 @@
   "types": "lib/index",
   "scripts": {
     "build": "tsc",
+    "server": "ts-node ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "poisson-disc-sampler": "^1.1.0",
     "socket.io": "^2.1.1",
