--- a/servur/package.json
+++ b/servur/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "firebase-admin": "^5.12.1",
     "poisson-disc-sampler": "^1.1.0",
     "socket.io": "^2.1.1",
     "uuid": "^3.3.2"
